2003-06-18  Miguel Sofer <msofer@users.sf.net>

	* generic/tclNamesp.c (Tcl_Export): removed erroneous comments
	[Bug 756744]

2003-06-17  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclCmdMZ.c:
	* tests/regexp.test: fixing of bugs related to regexp and regsub
	matching of empty strings.  Addition of a number of new tests.

2003-06-10  Miguel Sofer <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclExecute.c: let TclExecuteObjvInternal call
	TclInterpReady instead of relying on its callers to do so; fix for
	the part of [Bug 495830] that is new in 8.4. 
	* tests/interp.test: Added tests 18.9 (knownbug) and 18.10

2003-06-09  Don Porter  <dgp@users.sourceforge.net>

        * string.test (string-4.15): Added test for [string first] bug
        reported in Tcl 8.3, where test for all-single-byte-encoded strings
        was not reliable.

2003-06-04  Joe Mistachkin  <joe@mistachkin.com>

        * tools/man2help.tcl: Added duplicate help section checking           
        * tools/index.tcl:    and corrected a comment typo for the 
        getTopics proc in index.tcl [Bug #748700].

2003-05-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclObj.c (tclCmdNameType):  Converted internal rep
	management of the cmdName Tcl_ObjType the opposite way, to always
	use the twoPtrValue instead of always using the otherValuePtr.
	Previous fix on 2003-05-12 broke several extensions that wanted
	to poke around with the twoPtrValue.ptr2 value of a cmdName
	Tcl_Obj, like TclBlend and e4graph.  [Bug 726018]
	Thanks to George Petasis for the bug report and Jacob Levy for
	testing assistance.

2003-05-22  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.3 TAGGED FOR RELEASE ***

	* macosx/tclMacOSXBundle.c: fixed a problem that caused only the
	first call to Tcl_MacOSXOpenVersionedBundleResources() for a given
	bundle identifier to succeed. This caused the tcl runtime library
	not to be found in all interps created after the inital one.
	